# producer-consumer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  invoke.yml  pyproject.toml  tasks.py
src/: asgi.py  settings.py  urls.py  wsgi.py
