[tool.poetry]
name = "producer-consumer"
version = "0.1.0"
description = ""
authors = ["Renan de Assis <renan_assis97@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
